results/demo_20260121_074144/netfail/allow-api-to-auth.backup.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"creationTimestamp":"2026-01-21T07:30:13Z","generation":1,"name":"allow-api-to-auth","namespace":"resilience","resourceVersion":"54587","uid":"c449f9bb-08c8-4a46-861c-63e22e1763dd"},"spec":{"egress":[{"ports":[{"port":8000,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"app":"auth"}}}]}],"podSelector":{"matchLabels":{"app":"api"}},"policyTypes":["Egress"]}}
  creationTimestamp: "2026-01-21T07:35:15Z"
  generation: 1
  name: allow-api-to-auth
  namespace: resilience
  resourceVersion: "54899"
  uid: ef7c4dcf-0363-4bca-b1f9-01c7daf1eea6
spec:
  egress:
  - ports:
    - port: 8000
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: auth
  podSelector:
    matchLabels:
      app: api
  policyTypes:
  - Egress
